# dojo

./: .gitignore  README.md
advent_of_code/2022/1/: calorie_counting.sh
advent_of_code/2022/2/: beat_me_again.cpp  beat_me_daddy.cpp
ant_simulation/: CMakeLists.txt  README.md
ant_simulation/include/entities/: ant.hpp  entity.hpp
ant_simulation/include/simulation/: simulation.cpp  simulation.hpp
ant_simulation/src/: main.cpp
ant_simulation/src/entities/: ant.cpp
ant_simulation/src/simulation/: simulation.cpp
